--- a/web_app/WebContent/0317.html
+++ b/web_app/WebContent/0317.html
@@ -3,8 +3,34 @@
 <head>
 <meta charset="UTF-8">
 <title>Insert title here</title>
+<style type="text/css">
+a:link{color:gray;}
+a:visited{color:black;}
+a:hover{color:red;}
+a:active{color:blue;}
+h1, h4{
+color:#ffff00;
+}
+</style>
+<link rel='stylesheet' type='text/css' href='style.css' />
 </head>
 <body>
-Hello World! 안녕하세요~
+Hello World! 안녕하세요~<br />
+<p>문단1</p>
+<p>문단2</p>
+<p><span style='background-color:#0000FF'>
+<em>강조1</em><em>강조2</em>
+</span></p>
+<div style='background-color:#008800'>
+<h1>test1</h1>
+<h2>test1</h2>
+<h3>test1</h3>
+<h4>test1</h4>
+<h5 class="testclass">test1</h5>
+<h6 id="testid">test1</h6>
+</div>
+<p style='color:blue'>
+<a href="http://www.google.com">Hi!</a>
+</p>
 </body>
-</html>
+</html> 
